--- a/academy-kyrgyzstan.html
+++ b/academy-kyrgyzstan.html
@@ -222,7 +222,7 @@
             <div class="col-lg-6 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                 <div class="service-item rounded d-flex h-100">
                     <div class="service-img rounded">
-                        <img class="img-fluid" src="img/kazahsztan.jpg" alt="">
+                        <img class="img-fluid" src="img/kyrgyzstan.jpg" alt="">
                     </div>
                     <div class="service-text rounded p-5">
                         <h5 class="mb-3">72 курсы пов. Кв.</h5>
