--- a/index.html
+++ b/index.html
@@ -585,7 +585,7 @@
                                         <div class="service-text rounded p-5">
                                             <h5 class="mb-3">Стипендия в Германии</h5>
                                             <p class="mb-4">Стипендия Фонда Ханнса Зайделя в Германии</p>
-                                            <a href="scholarship-germany.html" class="btn btn-primary plus">+</a>
+                                            <a href="germany.html" class="btn btn-primary plus">+</a>
                                             <!-- <div class="dropdown">
                                                 <button class="btn btn-primary dropdown-toggle"
                                                     data-bs-toggle="dropdown">Подробнее</button>
