--- a/info3.html
+++ b/info3.html
@@ -211,9 +211,11 @@
       </div>
       <div class="bottom-navbar bg-white text-center">
         <div class="text-center d-flex justify-content-center">
-          <div class="p-2 bg-primary text-white px-5">Микротренинги</div>
+          <div class="p-2 px-5">Микротренинги</div>
           <div class="p-2 px-5">Публикации</div>
-          <div class="p-2 px-5">Встречи одногруппников</div>
+          <div class="p-2 bg-primary text-white px-5">
+            Встречи одногруппников
+          </div>
           <div class="p-2 px-5">Социальные проекты</div>
         </div>
       </div>
@@ -354,19 +356,21 @@
                 data-wow-delay="0.1s"
                 style="max-width: 500px"
               >
-                <p class="fs-5 fw-bold text-primary">Микротренинги</p>
+                <p class="fs-5 fw-bold text-primary text-uppercase">
+                  Встречи одногруппников
+                </p>
                 <h1 class="display-5 mb-5">Вклад Фонда Ханнса Зайделя</h1>
               </div>
               <div
                 class="portfolio-inner rounded wow fadeInUp"
                 style="width: 500px; margin: 0 auto"
               >
-                <img class="img-fluid" src="img/mikrotrening.png" alt="" />
+                <img class="img-fluid" src="img/publicii.png" alt="" />
                 <div class="portfolio-text">
                   <div class="d-flex">
                     <a
                       class="btn btn-lg-square rounded-circle mx-2"
-                      href="img/mikrotrening.png"
+                      href="img/publicii.png"
                       data-lightbox="portfolio"
                       ><i class="fa fa-eye"></i
                     ></a>
@@ -379,85 +383,65 @@
                 class="wow fadeInUp"
                 style="max-width: 1200px; margin-left: auto; margin-right: auto"
               >
-                <p class="fs-6 fw-bold text-primary text-uppercase">Целевая группа:</p>
+                <p class="fs-6 fw-bold text-primary text-uppercase">
+                  Целевая группа
+                </p>
                 <p>
                   Все успешные участники и выпускники долгосрочных магистерских
                   программ и краткосрочных учебных курсов, поддерживаемых Фондом
-                  Ханнса Заи
+                  Ханнса Зайделя, могут подать заявку на встречу с
+                  одногруппниками.
                 </p>
-                <p class="fs-6 fw-bold text-primary text-uppercase">
-                    Основные аспекты планирования и финансирования микротренингов в рамках ФХЗ
-                </p>
+                <p class="fs-6 fw-bold text-primary">ЗАДАЧИ</p>
                 <ul>
-                  <li>
-                    Проект микротренинга (заявка, программа, список участников,
-                    тест). Бланки документов можно получить в ФХЗ.
-                  </li>
-                  <li>
-                    Проект бюджета микротренинга. Микротренинги проводятся по
-                    принципу софинансирования. Вклад Фонда: не больше 10 евро на
-                    1 человек / день (например, однодневныи семинар для 10
-                    участников - Фонд заплатит только 100 евро, если 20
-                    участников - 200 евро).
-                  </li>
-                  <li>
-                    Тренерами могут быть стипендиаты ФХЗ. Гонорар для
-                    стипендиатов не предусмотрен. Могут быть возмещены
-                    транспортные расходы и расходы на проживание.
-                  </li>
+                  <li>Обмен информацией и опытом</li>
+                  <li>Усиление потенциала одногруппников,</li>
+                  <li>Культурное и интеллектуальное обогащение</li>
                 </ul>
                 <p class="fs-6 fw-bold text-primary">
-                    Правила и требования к проведению микротренингов, организованных ФХЗ
+                  ЧАСТОТА, ПРОДОЛЖИТЕЛЬНОСТЬ И ДАТЫ
+                </p>
+                <ol>
+                  <li>Частота: один раз в год,</li>
+                  <li>Продолжительность: от нескольких часов до трех дней</li>
+                  <li>Дата встречи: на усмотрение выпускников</li>
+                </ol>
+                <p class="fs-6 fw-bold text-primary">КАТЕГОРИИ ВСТРЕЧ</p>
+                <ol>
+                  <li>Личные: продвижение по карьерной лестнице</li>
+                  <li>
+                    Официальные: проведение тренинга, конференции, лекции,
+                    экскурсии в ведомства
+                  </li>
+                  <li>
+                    Культурные: празднование Нооруза, Дня независимости, 8 марта
+                    и других праздников
+                  </li>
+                  <li>
+                    Спортивные: проведение соревновании по футболу, волейболу,
+                    турниры по шахматам, кок-бору, скачкам, состязания по борьбе
+                  </li>
+                  <li>
+                    Посещение достопримечательностей: заповедников, исторических
+                    и святых мест
+                  </li>
+                </ol>
+                <p class="fs-6 fw-bold text-primary text-uppercase">
+                  Руководство по подготовке печатных материалов / публикаций:
                 </p>
                 <ol>
                   <li>
-                    За 30 дней до микротренинга организаторы должны предоставить
-                    на почту либо в офис ФХЗ в Бишкеке:
-                  </li>
-                  <li>
-                    Во время проведения микротренингов тренеры и организаторы не
-                    должны затрагивать политические вопросы, проводить тренинг
-                    только по техническим вопросам обучения и строго
-                    придерживаться утвержденнои
-                  </li>
-                  <li>
-                    Во всех документах микротренинга должен быть логотип ФХЗ и
-                    указано, что микротренинг проводится стипендиатами
-                    совместных программ.
-                  </li>
-                  <li>
-                    Проекты микротренинга и бюджета должны быть отправлены по
-                    электронной почте либо в офис ответственному сотруднику ФХЗ
-                    за 30 календарных днеи
-                  </li>
-                  <li>
-                    В течение 10 рабочих днеи после проведения микротренингов
-                    организаторы должны предоставить в офис ФХЗ:
+                    За 3 месяца до распечатки книги, автор должен предоставить в
+                    офис ФХЗ в Бишкеке или на почту:
                     <ul>
-                      <li>Отчет о микротренинге</li>
-                      <li>Авансовый отчет</li>
                       <li>
-                        Квитанции и счета, оформленные согласно законодательству
-                        КР
+                        Письменное заявление: ФИО автора, контактные данные,
+                        название книги, краткое содержание книги
                       </li>
-                      <li>
-                        Список участников с их подписями д. Пресс-релиз о
-                        микротренинге е. 5-6 лучших фотографии
-                      </li>
-                      <li>
-                        Заполненные анкеты (до и после) по теме микротренинга
-                      </li>
-                      <li>Заполненные анкеты для участников</li>
-                      <li>
-                        Если имеются, статьи о микротренинге из СМИ Бланки
-                        документов можно получить по запросу в ФХЗ.
-                      </li>
+                      <li>Предварительный бюджет</li>
                     </ul>
                   </li>
-                  <li>
-                    Фонд перечисляет оставшуюся сумму организатору в течение 10
-                    рабочих днеи
-                  </li>
+                  <li>Перед печатью готовую публикацию утвердить с ФХЗ</li>
                 </ol>
               </div>
             </div>
