--- a/info2.html
+++ b/info2.html
@@ -211,8 +211,8 @@
       </div>
       <div class="bottom-navbar bg-white text-center">
         <div class="text-center d-flex justify-content-center">
-          <div class="p-2 bg-primary text-white px-5">Микротренинги</div>
-          <div class="p-2 px-5">Публикации</div>
+          <div class="p-2 px-5">Микротренинги</div>
+          <div class="p-2 bg-primary text-white px-5">Публикации</div>
           <div class="p-2 px-5">Встречи одногруппников</div>
           <div class="p-2 px-5">Социальные проекты</div>
         </div>
@@ -354,19 +354,19 @@
                 data-wow-delay="0.1s"
                 style="max-width: 500px"
               >
-                <p class="fs-5 fw-bold text-primary">Микротренинги</p>
+                <p class="fs-5 fw-bold text-primary">ПУБЛИКАЦИИ</p>
                 <h1 class="display-5 mb-5">Вклад Фонда Ханнса Зайделя</h1>
               </div>
               <div
                 class="portfolio-inner rounded wow fadeInUp"
                 style="width: 500px; margin: 0 auto"
               >
-                <img class="img-fluid" src="img/mikrotrening.png" alt="" />
+                <img class="img-fluid" src="img/publicii.png" alt="" />
                 <div class="portfolio-text">
                   <div class="d-flex">
                     <a
                       class="btn btn-lg-square rounded-circle mx-2"
-                      href="img/mikrotrening.png"
+                      href="img/publicii.png"
                       data-lightbox="portfolio"
                       ><i class="fa fa-eye"></i
                     ></a>
@@ -379,85 +379,85 @@
                 class="wow fadeInUp"
                 style="max-width: 1200px; margin-left: auto; margin-right: auto"
               >
-                <p class="fs-6 fw-bold text-primary text-uppercase">Целевая группа:</p>
+                <p class="fs-6 fw-bold text-primary text-uppercase">Целевая группа</p>
                 <p>
                   Все успешные участники и выпускники долгосрочных магистерских
                   программ и краткосрочных учебных курсов, поддерживаемых Фондом
                   Ханнса Заи
                 </p>
-                <p class="fs-6 fw-bold text-primary text-uppercase">
-                    Основные аспекты планирования и финансирования микротренингов в рамках ФХЗ
+                <p>
+                  Фонд Ханнса Зайделя дает возможность и поддерживает инициативы
+                  по выпуску книг, брошюр, с целью распространения знании
                 </p>
+                <p class="fs-6 fw-bold text-primary">КАТЕГОРИИ ПУБЛИКАЦИИ</p>
                 <ul>
+                  <li>Учебные пособия, материалы для тренинга</li>
                   <li>
-                    Проект микротренинга (заявка, программа, список участников,
-                    тест). Бланки документов можно получить в ФХЗ.
+                    Сборники местных авторских стихотворений, произведений
                   </li>
-                  <li>
-                    Проект бюджета микротренинга. Микротренинги проводятся по
-                    принципу софинансирования. Вклад Фонда: не больше 10 евро на
-                    1 человек / день (например, однодневныи семинар для 10
-                    участников - Фонд заплатит только 100 евро, если 20
-                    участников - 200 евро).
-                  </li>
-                  <li>
-                    Тренерами могут быть стипендиаты ФХЗ. Гонорар для
-                    стипендиатов не предусмотрен. Могут быть возмещены
-                    транспортные расходы и расходы на проживание.
-                  </li>
+                  <li>Публикации о местных исторических событиях</li>
+                  <li>Брошюры с информацией о регионе, области.</li>
                 </ul>
+                <p class="fs-6 fw-bold text-primary">ВКЛАД ВЫПУСКНИКОВ</p>
+                <p>
+                  Выпускники полностью ответственны за содержимое: дизайн,
+                  редактура, текст, фотографии.
+                </p>
+                <ol>
+                  <li>Отличное качество фотографии</li>
+                  <li>Грамотный текст, проверенный редактором</li>
+                  <li>Дизайн и верстка</li>
+                  <li>
+                    В книге должно быть упоминание о поддержке ФХЗ с логотипом
+                    фонда, а также надпись «Фонд Ханнса Зайделя не несет
+                    ответственности за содержимое в тексте, за контент
+                    ответственен автор публикации»,
+                  </li>
+                  <li>
+                    Отчеты по расходам и оплате, оформленные согласно
+                    законодательству КР.
+                  </li>
+                </ol>
                 <p class="fs-6 fw-bold text-primary">
-                    Правила и требования к проведению микротренингов, организованных ФХЗ
+                  ВКЛАД ФОНДА ХАННСА ЗАЙДЕЛЯ:
                 </p>
                 <ol>
                   <li>
-                    За 30 дней до микротренинга организаторы должны предоставить
-                    на почту либо в офис ФХЗ в Бишкеке:
+                    Расходы: Фонд покрывает расходы на распечатку публикации
                   </li>
                   <li>
-                    Во время проведения микротренингов тренеры и организаторы не
-                    должны затрагивать политические вопросы, проводить тренинг
-                    только по техническим вопросам обучения и строго
-                    придерживаться утвержденнои
+                    Содержание: Фонд может предоставить данные выпускников из
+                    базы для написания рецензии, рекомендации или вступительного
+                    слова
                   </li>
                   <li>
-                    Во всех документах микротренинга должен быть логотип ФХЗ и
-                    указано, что микротренинг проводится стипендиатами
-                    совместных программ.
+                    Фонд ответственен за выбор типографии и распечатку
+                    материалов
                   </li>
                   <li>
-                    Проекты микротренинга и бюджета должны быть отправлены по
-                    электронной почте либо в офис ответственному сотруднику ФХЗ
-                    за 30 календарных днеи
+                    В книге должно быть упоминание о поддержке ФХЗ с логотипом
+                    фонда, а также надпись «Фонд Ханнса Зайделя не несет
+                    ответственности за содержимое в тексте, за контент
+                    ответственен автор публикации»,
                   </li>
+                  <li>Максимальная сумма вклада 40 000 сом</li>
+                </ol>
+                <p class="fs-6 fw-bold text-primary text-uppercase">
+                  Руководство по подготовке печатных материалов / публикаций:
+                </p>
+                <ol>
                   <li>
-                    В течение 10 рабочих днеи после проведения микротренингов
-                    организаторы должны предоставить в офис ФХЗ:
+                    За 3 месяца до распечатки книги, автор должен предоставить в
+                    офис ФХЗ в Бишкеке или на почту:
                     <ul>
-                      <li>Отчет о микротренинге</li>
-                      <li>Авансовый отчет</li>
                       <li>
-                        Квитанции и счета, оформленные согласно законодательству
-                        КР
+                        Письменное заявление: ФИО автора, контактные данные,
+                        название книги, краткое содержание книги
                       </li>
-                      <li>
-                        Список участников с их подписями д. Пресс-релиз о
-                        микротренинге е. 5-6 лучших фотографии
-                      </li>
-                      <li>
-                        Заполненные анкеты (до и после) по теме микротренинга
-                      </li>
-                      <li>Заполненные анкеты для участников</li>
-                      <li>
-                        Если имеются, статьи о микротренинге из СМИ Бланки
-                        документов можно получить по запросу в ФХЗ.
-                      </li>
+                      <li>Предварительный бюджет</li>
                     </ul>
                   </li>
-                  <li>
-                    Фонд перечисляет оставшуюся сумму организатору в течение 10
-                    рабочих днеи
-                  </li>
+                  <li>Перед печатью готовую публикацию утвердить с ФХЗ</li>
                 </ol>
               </div>
             </div>
