--- a/project.html
+++ b/project.html
@@ -177,9 +177,6 @@
 
     <!-- Projects Start -->
     <div class="container-fluid p-0 wow fadeIn  d-lg-block d-sm-none" data-wow-delay="0.1s">
-        <!-- <div class="text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
-            <h1 class="display-5 mb-5">Стипендиальные Программы</h1>
-        </div> -->
         <div id="carousel" class="carousel slide" data-bs-ride="carousel">
             <ol class="carousel-indicators">
                 <li data-bs-target="#carousel" data-bs-slide-to="0" class="active"></li>
@@ -199,15 +196,16 @@
                                             <h5 class="mb-3">Магистратура в Кыргызстане</h5>
                                             <p class="mb-4">Магистратура в Академии государственного управления при
                                                 Президенте Кыргызской Республики</p>
-                                            <div class="dropdown">
-                                                <button class="btn btn-primary dropdown-toggle"
-                                                    data-bs-toggle="dropdown">Подробнее</button>
+                                            <a href="academy-kyrgyzstan.html" class="btn btn-primary plus">+</a>
+                                            <!-- <div class="dropdown">
+                                                <a href="academy-kyrgyzstan.html" class="btn btn-primary dropdown-toggle"
+                                                    data-bs-toggle="dropdown">Подробнее</a>
                                                 <div class="dropdown-menu bg-dark m-0 mt-2">
-                                                    <a href="404.html" class="dropdown-item text-white">Магистратура</a>
-                                                    <a href="404.html" class="dropdown-item text-white">72 курсы пов.
-                                                        Кв.</a>
+                                                    <a href="404.html"
+                                                        class="dropdown-item text-white">Магистратура</a>
+                                                    <a href="404.html" class="dropdown-item text-white">72 курсы пов. Кв.</a>
                                                 </div>
-                                            </div>
+                                            </div> -->
                                         </div>
                                     </div>
                                 </div>
@@ -220,16 +218,17 @@
                                             <h5 class="mb-3">Магистратура в Таджикистане</h5>
                                             <p class="mb-4">Магистратура в Академии государственного управления при
                                                 Президенте Республики Таджикистан</p>
-                                            <div class="dropdown">
+                                            <a href="academy-tadgikistan.html" class="btn btn-primary plus">+</a>
+                                            <!-- <div class="dropdown">
                                                 <button class="btn btn-primary dropdown-toggle"
                                                     data-bs-toggle="dropdown">Подробнее</button>
                                                 <div class="dropdown-menu bg-dark m-0 mt-2">
-                                                    <a href="404.html" class="dropdown-item text-white">Магистратура</a>
-                                                    <a href="404.html" class="dropdown-item text-white">Проект «Женщина
-                                                        лидер»</a>
-                                                    <!-- <a href="{% url 'presentation' %}" class="dropdown-item">Проект «МСУ»</a> -->
+                                                    <a href="404.html"
+                                                        class="dropdown-item text-white">Магистратура</a>
+                                                    <a href="404.html"
+                                                        class="dropdown-item text-white">Проект «Женщина лидер»</a>
                                                 </div>
-                                            </div>
+                                            </div> -->
                                         </div>
                                     </div>
                                 </div>
@@ -244,13 +243,15 @@
                                                 Президенте
                                                 Республики
                                                 Казахстан</p>
-                                            <div class="dropdown">
+                                            <a href="academy-kazakhstan.html" class="btn btn-primary plus">+</a>
+                                            <!-- <div class="dropdown">
                                                 <button class="btn btn-primary dropdown-toggle"
                                                     data-bs-toggle="dropdown">Подробнее</button>
                                                 <div class="dropdown-menu bg-dark m-0 mt-2">
-                                                    <a href="404.html" class="dropdown-item text-white">Магистратура</a>
+                                                    <a href="404.html"
+                                                        class="dropdown-item text-white">Магистратура</a>
                                                 </div>
-                                            </div>
+                                            </div> -->
                                         </div>
                                     </div>
                                 </div>
@@ -276,14 +277,15 @@
                                                 Президенте
                                                 Республики
                                                 Казахстан</p>
-                                            <div class="dropdown">
+                                            <a href="academy-uzbekistan.html" class="btn btn-primary plus">+</a>
+                                            <!-- <div class="dropdown">
                                                 <button class="btn btn-primary dropdown-toggle"
                                                     data-bs-toggle="dropdown">Подробнее</button>
                                                 <div class="dropdown-menu bg-dark m-0 mt-2">
-                                                    <a href="404.html" class="dropdown-item text-white">Магистратура</a>
-                                                    <!-- <a href="{% url 'presentation' %}" class="dropdown-item">проект «МСУ»</a> -->
+                                                    <a href="404.html"
+                                                        class="dropdown-item text-white">Магистратура</a>
                                                 </div>
-                                            </div>
+                                            </div> -->
                                         </div>
                                     </div>
                                 </div>
@@ -295,14 +297,15 @@
                                         <div class="service-text rounded p-5">
                                             <h5 class="mb-3">Стипендия в Германии</h5>
                                             <p class="mb-4">Стипендия Фонда Ханнса Зайделя в Германии</p>
-                                            <div class="dropdown">
+                                            <a href="germany.html" class="btn btn-primary plus">+</a>
+                                            <!-- <div class="dropdown">
                                                 <button class="btn btn-primary dropdown-toggle"
                                                     data-bs-toggle="dropdown">Подробнее</button>
                                                 <div class="dropdown-menu bg-dark m-0 mt-2">
                                                     <a href="scholarship-germany.html"
                                                         class="dropdown-item text-white">Стипендия</a>
                                                 </div>
-                                            </div>
+                                            </div> -->
                                         </div>
                                     </div>
                                 </div>
@@ -314,15 +317,16 @@
                                         <div class="service-text rounded p-5">
                                             <h5 class="mb-3">Магистратура в Кыргызстане</h5>
                                             <p class="mb-4">Магистратура в УНПК МУК</p>
-                                            <div class="dropdown">
+                                            <a href="academy-kyrgyzstan.html" class="btn btn-primary plus">+</a>
+                                            <!-- <div class="dropdown">
                                                 <button class="btn btn-primary dropdown-toggle"
                                                     data-bs-toggle="dropdown">Подробнее</button>
                                                 <div class="dropdown-menu bg-dark m-0 mt-2">
-                                                    <a href="404.html" class="dropdown-item text-white">Магистратура</a>
-                                                    <a href="404.html" class="dropdown-item text-white">72
-                                                        курсы пов. Кв.</a>
+                                                    <a href="404.html"
+                                                        class="dropdown-item text-white">Магистратура</a>
+                                                    <a href="404.html" class="dropdown-item text-white">72 курсы пов. Кв.</a>
                                                 </div>
-                                            </div>
+                                            </div> -->
                                         </div>
                                     </div>
                                 </div>
