--- a/contact.html
+++ b/contact.html
@@ -113,6 +113,19 @@
                 <a href="QA.html" class="nav-item nav-link">Вопросы и ответы</a>
                 <a href="about.html" class="nav-item nav-link">Новости</a>
                 <a href="contact.html" class="nav-item nav-link active">Контакты</a>
+
+                <!-- Language Dropdown Start -->
+                <div class="nav-item dropdown">
+                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Язык</a>
+                    <div class="dropdown-menu bg-light m-0">
+                        <a href="?lang=ru" class="dropdown-item-a active">Русский</a>
+                        <a href="?lang=en" class="dropdown-item-a">English</a>
+                        <a href="?lang=es" class="dropdown-item-a">Кыргызча</a>
+                        <!-- Add more languages here -->
+                    </div>
+                </div>
+                <!-- Language Dropdown End -->
+
                 <button type="button" class="btn btn-primary py-2 top-0 end-0 me-2" data-bs-toggle="modal"
                     data-bs-target="#subscribeModal">Подписаться</button>
             </div>
