--- a/index.html
+++ b/index.html
@@ -220,6 +220,19 @@
                     </div>
                 </div> -->
                 <!-- <button type="button" class="btn btn-primary py-2 top-0 end-0 mt-2 me-2">Подписаться</button> -->
+
+                <!-- Language Dropdown Start -->
+                <div class="nav-item dropdown">
+                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Язык</a>
+                    <div class="dropdown-menu bg-light m-0">
+                        <a href="?lang=ru" class="dropdown-item-a active">Русский</a>
+                        <a href="?lang=en" class="dropdown-item-a">English</a>
+                        <a href="?lang=es" class="dropdown-item-a">Кыргызча</a>
+                        <!-- Add more languages here -->
+                    </div>
+                </div>
+                <!-- Language Dropdown End -->
+
                 <button type="button" class="btn btn-primary py-2 top-0 end-0 me-2" data-bs-toggle="modal"
                     data-bs-target="#subscribeModal">Подписаться</button>
             </div>
@@ -485,7 +498,7 @@
                 <div class="carousel-item active">
                     <div class="container-xxl py-5">
                         <div class="container">
-                            <div class="row g-4">
+                            <div class="row g-5">
                                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                                     <div class="service-item rounded d-flex h-100">
                                         <div class="service-img rounded">
@@ -564,7 +577,7 @@
                             <!-- <div class="text-center mx-auto" style="max-width: 500px;">
                                         <h1 class="display-5 mb-5">Стипендиальные Программы №2</h1>
                                     </div> -->
-                            <div class="row g-4">
+                            <div class="row g-5">
                                 <div class="col-lg-4 col-md-6">
                                     <div class="service-item rounded d-flex h-100">
                                         <div class="service-img rounded">
