--- a/academy-kyrgyzstan.html
+++ b/academy-kyrgyzstan.html
@@ -179,6 +179,19 @@
                         <a href="404.html" class="dropdown-item">404 Page</a>
                     </div>
                 </div> -->
+
+                <!-- Language Dropdown Start -->
+                <div class="nav-item dropdown">
+                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Язык</a>
+                    <div class="dropdown-menu bg-light m-0">
+                        <a href="?lang=ru" class="dropdown-item-a active">Русский</a>
+                        <a href="?lang=en" class="dropdown-item-a">English</a>
+                        <a href="?lang=es" class="dropdown-item-a">Кыргызча</a>
+                        <!-- Add more languages here -->
+                    </div>
+                </div>
+                <!-- Language Dropdown End -->
+
                 <button type="button" class="btn btn-primary py-2 top-0 end-0 me-2" data-bs-toggle="modal" data-bs-target="#subscribeModal">Подписаться</button>
             </div>
             <!-- <a href="quote.html" class="btn btn-primary py-4 px-lg-4 rounded-0 d-none d-lg-block">Задать вопрос<i class="fa fa-arrow-right ms-3"></i></a> -->
