--- a/info.html
+++ b/info.html
@@ -65,7 +65,6 @@
     .bg-primary a {
       color: white !important;
     }
-
   </style>
   <!-- JavaScript Libraries -->
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
@@ -167,6 +166,19 @@
                 </div>
             </div> -->
         <!-- <button type="button" class="btn btn-primary py-2 top-0 end-0 mt-2 me-2">Подписаться</button> -->
+
+        <!-- Language Dropdown Start -->
+        <div class="nav-item dropdown">
+          <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Язык</a>
+          <div class="dropdown-menu bg-light m-0">
+            <a href="?lang=ru" class="dropdown-item-a active">Русский</a>
+            <a href="?lang=en" class="dropdown-item-a">English</a>
+            <a href="?lang=es" class="dropdown-item-a">Кыргызча</a>
+            <!-- Add more languages here -->
+          </div>
+        </div>
+        <!-- Language Dropdown End -->
+
         <button type="button" class="btn btn-primary py-2 top-0 end-0 me-2" data-bs-toggle="modal"
           data-bs-target="#subscribeModal">Подписаться</button>
       </div>
