--- a/info.html
+++ b/info.html
@@ -54,9 +54,9 @@
       right: 0;
     }
 
-    a {
+    /* a {
       color: black !important;
-    }
+    } */
 
     .bg-primary {
       background-color: #0097d2 !important;
@@ -314,8 +314,8 @@
         <div class="container-xxl py-5">
           <div class="container">
             <div class="text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px">
-              <p class="fs-5 fw-bold text-primary">Микротренинги</p>
-              <h1 class="display-5 mb-5">Вклад Фонда Ханнса Зайделя</h1>
+              <!-- <p class="fs-5 fw-bold text-primary">Микротренинги</p> -->
+              <h1 class="display-5 mb-5">Информационный лист</h1>
             </div>
             <div class="portfolio-inner rounded wow fadeInUp" style="width: 500px; margin: 0 auto">
               <img class="img-fluid" src="img/mikrotrening.png" alt="" />
@@ -331,9 +331,9 @@
             <div class="wow fadeInUp" style="max-width: 1200px; margin-left: auto; margin-right: auto">
               <p class="fs-6 fw-bold text-primary text-uppercase">Целевая группа:</p>
               <p>
-                Все успешные участники и выпускники долгосрочных магистерских
-                программ и краткосрочных учебных курсов, поддерживаемых Фондом
-                Ханнса Заи
+                Все успешные участники и выпускники долгосрочных магистерских программ
+                и краткосрочных учебных курсов, поддерживаемых Фондом Ханнса Зайделя, могут подать заявку на встречу с
+                одногруппниками.
               </p>
               <p class="fs-6 fw-bold text-primary text-uppercase">
                 Основные аспекты планирования и финансирования микротренингов в рамках ФХЗ
@@ -357,7 +357,9 @@
                 </li>
               </ul>
               <p class="fs-6 fw-bold text-primary">
-                Правила и требования к проведению микротренингов, организованных ФХЗ
+                Руководство по организации
+                микротренингов Фонда
+                Ханнса Зайделя
               </p>
               <ol>
                 <li>
@@ -368,7 +370,7 @@
                   Во время проведения микротренингов тренеры и организаторы не
                   должны затрагивать политические вопросы, проводить тренинг
                   только по техническим вопросам обучения и строго
-                  придерживаться утвержденнои
+                  придерживаться утвержденной программы.
                 </li>
                 <li>
                   Во всех документах микротренинга должен быть логотип ФХЗ и
@@ -378,10 +380,21 @@
                 <li>
                   Проекты микротренинга и бюджета должны быть отправлены по
                   электронной почте либо в офис ответственному сотруднику ФХЗ
-                  за 30 календарных днеи
+                  за 30 календарных дней до даты
+                  проведения.
+                  <br>
+                  В течении 10 рабочих дней после
+                  подачи полного комплекта
+                  документов организаторы получат
+                  одобрение или отказ в
+                  софинансировании. При
+                  получении одобрения,
+                  организатору авансом
+                  перечисляется 50% от общего
+                  бюджета микротренинга.
                 </li>
                 <li>
-                  В течение 10 рабочих днеи после проведения микротренингов
+                  В течение 10 рабочих дней после проведения микротренингов
                   организаторы должны предоставить в офис ФХЗ:
                   <ul>
                     <li>Отчет о микротренинге</li>
@@ -406,9 +419,20 @@
                 </li>
                 <li>
                   Фонд перечисляет оставшуюся сумму организатору в течение 10
-                  рабочих днеи
+                  рабочих дней после получения и
+                  проверки вышеуказанных документов
+                  на полноту и правильность.
                 </li>
+                <br>
+                <br>
               </ol>
+              <p class="fs-6 fw-bold text-primary">Фонд не финансирует:</p>
+              <li>гонорар тренера</li>
+              <li>аренду помещения для
+                проведения микротренинга</li>
+              <li>покупку/аренду оборудования для
+                проведения микротренинга</li>
+              <li>транспортные расходы участников</li>
             </div>
           </div>
         </div>
