--- a/info3.html
+++ b/info3.html
@@ -54,9 +54,9 @@
       right: 0;
     }
 
-    a {
+    /* a {
       color: black !important;
-    }
+    } */
 
     .bg-primary {
       background-color: #0097d2 !important;
@@ -122,7 +122,7 @@
   <!-- Navbar Start -->
   <nav class="navbar navbar-expand-xxl bg-white navbar-light sticky-top p-0">
     <a href="index.html" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
-      <img src="img/logo-ru.jpg" width="100" alt="logo" />
+      <img src="img/logo-ru.jpg" width="100" alt="logo">
     </a>
     <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
       <span class="navbar-toggler-icon"></span>
@@ -130,48 +130,42 @@
     <div class="collapse navbar-collapse" id="navbarCollapse">
       <div class="navbar-nav ms-auto p-4 p-lg-0">
         <a href="index.html" class="nav-item nav-link">Главная</a>
-        <a href="about.html" class="nav-item nav-link">Новости</a>
-        <a href="service.html" class="nav-item nav-link">Тренинги</a>
-        <a href="project.html" class="nav-item nav-link">Стипендиальные программы</a>
-        <a href="QA.html" class="nav-item nav-link">Вопросы и ответы</a>
-        <a href="contact.html" class="nav-item nav-link">Контакты</a>
-        <div class="nav-item dropdown">
-          <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">База знаний</a>
-          <div class="dropdown-menu bg-light m-0">
-            <a href="books.html" class="dropdown-item-a">Книги</a>
-            <a href="presentations.html" class="dropdown-item-a">Презентации</a>
-            <a href="video.html" class="dropdown-item-a">Видео</a>
-            <!-- <a href="404.html" class="dropdown-item">404 Page</a> -->
-          </div>
-        </div>
+        <a href="project.html" class="nav-item nav-link">Стипендии</a>
         <!-- <div class="nav-item dropdown">
-                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">База знаний</a>
-                    <div class="dropdown-menu bg-light m-0">
-                        <a href="books.html" class="dropdown-item">Книги</a>
-                        <a href="presentations.html" class="dropdown-item">Презентации</a>
-                        <a href="video.html" class="dropdown-item">Видео</a>
-                        <a href="404.html" class="dropdown-item">404 Page</a>
-                    </div>
+                <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">База знаний</a>
+                <div class="dropdown-menu bg-light m-0">
+                    <a href="books.html" class="dropdown-item-a">Книги</a>
+                    <a href="presentations.html" class="dropdown-item-a">Презентации</a>
+                    <a href="video.html" class="dropdown-item-a">Видео</a>
                 </div>
-                <div class="nav-item dropdown">
-                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">О нас</a>
-                    <div class="dropdown-menu bg-light m-0">
-                        <a href="team.html" class="dropdown-item">Наша команда</a>
-                        <a href="testimonials.html" class="dropdown-item">Отзызы</a>
-                        <a href="contact.html" class="dropdown-item nav-item">Контакты</a>
-                    </div>
-                </div> -->
-        <a href="info.html" class="nav-item nav-link active">Информация для выпускников</a>
+            </div> -->
+        <a href="baza-znanii.html" class="nav-item nav-link">База знаний</a>
+        <a href="service.html" class="nav-item nav-link">Тренинги</a>
+        <a href="info.html" class="nav-item nav-link active">Для выпускников</a>
+        <a href="QA.html" class="nav-item nav-link">Вопросы и ответы</a>
+        <a href="about.html" class="nav-item nav-link">Новости</a>
+        <a href="contact.html" class="nav-item nav-link">Контакты</a>
+
         <!-- <div class="nav-item dropdown">
-                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
-                    <div class="dropdown-menu bg-light m-0">
-                        <a href="feature.html" class="dropdown-item">Features</a>
-                        <a href="quote.html" class="dropdown-item">Free Quote</a>
-                        <a href="team.html" class="dropdown-item">Our Team</a>
-                        <a href="testimonial.html" class="dropdown-item">Testimonial</a>
-                        <a href="404.html" class="dropdown-item">404 Page</a>
-                    </div>
-                </div> -->
+                <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">О нас</a>
+                <div class="dropdown-menu bg-light m-0">
+                    <a href="team.html" class="dropdown-item">Наша команда</a>
+                    <a href="testimonials.html" class="dropdown-item">Отзызы</a>
+                    <a href="contact.html" class="dropdown-item nav-item">Контакты</a>
+                </div>
+            </div> -->
+
+        <!-- <div class="nav-item dropdown">
+                <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
+                <div class="dropdown-menu bg-light m-0">
+                    <a href="feature.html" class="dropdown-item">Features</a>
+                    <a href="quote.html" class="dropdown-item">Free Quote</a>
+                    <a href="team.html" class="dropdown-item">Our Team</a>
+                    <a href="testimonial.html" class="dropdown-item">Testimonial</a>
+                    <a href="404.html" class="dropdown-item">404 Page</a>
+                </div>
+            </div> -->
+        <!-- <button type="button" class="btn btn-primary py-2 top-0 end-0 mt-2 me-2">Подписаться</button> -->
 
         <!-- Language Dropdown Start -->
         <div class="nav-item dropdown">
@@ -186,9 +180,7 @@
         <!-- Language Dropdown End -->
 
         <button type="button" class="btn btn-primary py-2 top-0 end-0 me-2" data-bs-toggle="modal"
-          data-bs-target="#subscribeModal">
-          Подписаться
-        </button>
+          data-bs-target="#subscribeModal">Подписаться</button>
       </div>
     </div>
     <div class="bottom-navbar bg-white text-center">
@@ -316,18 +308,18 @@
             </div>
         </div>
     </div> -->
-  <div class="container bg-light">
+  <div class="container bg-light wow fadeInUp" data-wow-delay="0.1s">
     <div class="row">
       <div class="p-3 col-12">
         <div class="container-xxl py-5">
           <div class="container">
-            <div class="text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px">
-              <p class="fs-5 fw-bold text-primary text-uppercase">
+            <div class="text-center mx-auto wow fadeInUp" data-wow-delay="0.5s" style="max-width: 500px">
+              <!-- <p class="fs-5 fw-bold text-primary text-uppercase">
                 Встречи одногруппников
-              </p>
-              <h1 class="display-5 mb-5">Вклад Фонда Ханнса Зайделя</h1>
+              </p> -->
+              <h1 class="display-5 mb-5">Информационный лист</h1>
             </div>
-            <div class="portfolio-inner rounded wow fadeInUp" style="width: 500px; margin: 0 auto">
+            <!-- <div class="portfolio-inner rounded wow fadeInUp" style="width: 500px; margin: 0 auto">
               <img class="img-fluid" src="img/publicii.png" alt="" />
               <div class="portfolio-text">
                 <div class="d-flex">
@@ -335,10 +327,11 @@
                       class="fa fa-eye"></i></a>
                 </div>
               </div>
-            </div>
+            </div> -->
             <br />
             <br />
-            <div class="wow fadeInUp" style="max-width: 1200px; margin-left: auto; margin-right: auto">
+            <div class="wow fadeInUp" style="max-width: 1200px; margin-left: auto; margin-right: auto"
+              data-wow-delay="0.5s">
               <p class="fs-6 fw-bold text-primary text-uppercase">
                 Целевая группа
               </p>
@@ -350,57 +343,163 @@
               </p>
               <p class="fs-6 fw-bold text-primary">ЗАДАЧИ</p>
               <ul>
-                <li>Обмен информацией и опытом</li>
+                <li>Обмен информацией и опытом,</li>
                 <li>Усиление потенциала одногруппников,</li>
-                <li>Культурное и интеллектуальное обогащение</li>
+                <li>Культурное и интеллектуальное обогащение.</li>
               </ul>
               <p class="fs-6 fw-bold text-primary">
                 ЧАСТОТА, ПРОДОЛЖИТЕЛЬНОСТЬ И ДАТЫ
               </p>
               <ol>
                 <li>Частота: один раз в год,</li>
-                <li>Продолжительность: от нескольких часов до трех дней</li>
-                <li>Дата встречи: на усмотрение выпускников</li>
+                <li>Продолжительность: от нескольких часов до трех дней,</li>
+                <li>Дата встречи: на усмотрение выпускников.</li>
               </ol>
               <p class="fs-6 fw-bold text-primary">КАТЕГОРИИ ВСТРЕЧ</p>
               <ol>
-                <li>Личные: продвижение по карьерной лестнице</li>
+                <li>Личные: продвижение по карьерной лестнице;</li>
                 <li>
                   Официальные: проведение тренинга, конференции, лекции,
-                  экскурсии в ведомства
+                  экскурсии в ведомства;
                 </li>
                 <li>
                   Культурные: празднование Нооруза, Дня независимости, 8 марта
-                  и других праздников
+                  и других праздников;
                 </li>
                 <li>
                   Спортивные: проведение соревновании по футболу, волейболу,
-                  турниры по шахматам, кок-бору, скачкам, состязания по борьбе
+                  турниры по шахматам, кок-бору, скачкам, состязания по борьбе;
                 </li>
                 <li>
                   Посещение достопримечательностей: заповедников, исторических
-                  и святых мест
+                  и святых мест.
                 </li>
               </ol>
               <p class="fs-6 fw-bold text-primary text-uppercase">
-                Руководство по подготовке печатных материалов / публикаций:
+                ФОРМАТ И ТЕМА ВСТРЕЧИ
               </p>
               <ol>
-                <li>
-                  За 3 месяца до распечатки книги, автор должен предоставить в
-                  офис ФХЗ в Бишкеке или на почту:
-                  <ul>
-                    <li>
-                      Письменное заявление: ФИО автора, контактные данные,
-                      название книги, краткое содержание книги
-                    </li>
-                    <li>Предварительный бюджет</li>
-                  </ul>
-                </li>
-                <li>Перед печатью готовую публикацию утвердить с ФХЗ</li>
+                Формат и темы встреч: на усмотрение
+                выпускников.
+              </ol>
+              <p class="fs-6 fw-bold text-primary text-uppercase">
+                МЕСТО ПРОВЕДЕНИЯ
+              </p>
+              <ol>
+                Выпускники определяют место встречи
+                самостоятельно.
               </ol>
             </div>
           </div>
+        </div>
+      </div>
+    </div>
+    <div class="container-xxl py-5">
+      <div class="container">
+        <div class="text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
+          <p class="fs-5 fw-bold text-primary">ВСТРЕЧИ ОДНОГРУППНИКОВ</p>
+          <h1 class="display-5 mb-5">Вклад Фонда Ханнса Зайделя</h1>
+        </div>
+        <div class="portfolio-inner rounded wow fadeInUp" style="width: 500px; margin: 0 auto;">
+          <img class="img-fluid" src="img/service-1.jpg" alt="">
+          <div class="portfolio-text">
+            <div class="d-flex">
+              <a class="btn btn-lg-square rounded-circle mx-2" href="img/service-1.jpg" data-lightbox="portfolio"><i
+                  class="fa fa-eye"></i></a>
+            </div>
+          </div>
+        </div>
+        <br>
+        <br>
+        <div class="wow fadeInUp" style="max-width: 800px; margin-left: auto; margin-right: auto;">
+          <p>
+            1. Расходы: ФХЗ может оплатить некоторые расходы, где есть образовательный аспект, повышения потенциала
+            выпускниов: тренинги и лекции.
+            <br>
+            ФХЗ может оплатить:
+            <br>
+            — аренду конференц-зала,
+            <br>
+            — раздаточные материалы,
+            <br>
+            — подготовку сертификатов,
+            <br>
+            — питание: обед, кофе-брейки и ужин — если продолжительность мероприятия 2 дня (максимум),
+            <br>
+            При необходимости ФХЗ может оплатить:
+            <br>
+            гонорар тренеров/приглашенных экспертов, командировочные расходы тренеров (проживание и транспорт).
+            <br>
+            <br>
+            2. Контакты: ФХЗ может предоставить контактные данные выпускников той или иной группы по письменному запросу
+            (по электронной почте) организаторов встречи.
+            <br>
+            <br>
+            3. Тренеры: ФХЗ может порекомендовать экспертов, тренеров или лекторов.
+            <br>
+            <br>
+            4. Участие: ФХЗ может принять участие на встрече.
+            <br>
+            <br>
+            5. Материалы: ФХЗ может предоставить информационные материалы по теме встречи.
+            <br>
+            <br>
+            Контактное лицо: Айсулу Мукамбетова <a href="pr-za@hss.de">pr-za@hss.de</a>
+            <br>
+            +996 312 66 24 89 (109)
+          </p>
+        </div>
+        <br>
+        <br>
+        <br>
+        <br>
+        <div class="text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
+          <h1 class="display-5 mb-5">Вклад выпускников</h1>
+          <p class="fs-5 fw-bold text-primary">Выпускники полностью ответственны за организацию встреч</p>
+        </div>
+        <div class="portfolio-inner rounded wow fadeInUp" style="width: 500px; margin: 0 auto;">
+          <img class="img-fluid" src="img/service-2.jpg" alt="">
+          <div class="portfolio-text">
+            <div class="d-flex">
+              <a class="btn btn-lg-square rounded-circle mx-2" href="img/service-2.jpg" data-lightbox="portfolio"><i
+                  class="fa fa-eye"></i></a>
+            </div>
+          </div>
+        </div>
+        <br>
+        <br>
+        <div class="wow fadeInUp" style="max-width: 800px; margin-left: auto; margin-right: auto;">
+          <p>
+            1. Ответственные лица: выпускники сами выбирают ответственных людей для:
+            <br>
+            — сбора одногруппников,
+            <br>
+            — организации встречи,
+            <br>
+            — обеспечения безопасности одногруппников во время встречи,
+            <br>
+            — Информирования ФХЗ за 3 недели до встречи, если требуется материальная/нематериальная поддержка ФХЗ.
+            <br>
+            <br>
+            2. Расходы: выпускники сами покрывают все расходы на проезд и проживание и другие непредвиденные расходы.
+            <br>
+            <br>
+            3. Логистика: выпускники сами собирают своих одногруппников. Для получения контактных данных одногруппников,
+            требуется письменный запрос в ФХЗ по электронной почте.
+            <br>
+            <br>
+            4. Письмо — приглашение : при необходимости, представители ФХЗ и/или АГУПКР приглашаются на встречу в
+            письменном виде за 3 недели.
+            <br>
+            <br>
+            5. Публикация встречи: во время и/или после встречи, организаторы предоставляют ФХЗ информацию и фотографии
+            со встречи для публикации на вебсайте и социальных сетях ФХЗ.
+            <br>
+            <br>
+            Контактное лицо: Айсулу Мукамбетова <a href="pr-za@hss.de">pr-za@hss.de</a>
+            <br>
+            +996 312 66 24 89 (109)
+          </p>
         </div>
       </div>
     </div>
