--- a/info2.html
+++ b/info2.html
@@ -188,7 +188,7 @@
         <div class="p-2 px-5"><a href="info.html">Микротренинги</a></div>
         <div class="p-2 bg-primary px-5"><a href="info2.html">Публикации</a></div>
         <div class="p-2 px-5"><a href="info3.html">Встречи одногруппников</a></div>
-        <div class="p-2 px-5">Социальные проекты</div>
+        <div class="p-2 px-5"><a href="info4.html">Социальные проекты</a></div>
       </div>
     </div>
   </nav>
