--- a/service.html
+++ b/service.html
@@ -172,11 +172,20 @@
 
 
     <!-- Service Start -->
+    <div class="row wow fadeInUp" data-wow-delay="0.3s">
+        <div class="col-12 text-center">
+            <ul class="list-inline rounded mb-5" id="portfolio-flters">
+                <li class="mx-2 active" data-filter="*">All</li>
+                <li class="mx-2" data-filter=".first">Актуальные</li>
+                <li class="mx-2" data-filter=".second">Прошедшие</li>
+            </ul>
+        </div>
+    </div>
     <div class="container-xxl py-5">
         <div class="container">
             <div class="text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
             </div>
-            <div class="row g-4" style="margin-bottom: 50px;">
+            <div class="row g-5" style="margin-bottom: 50px;">
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="service-item rounded d-flex h-100">
                         <div class="service-img rounded">
@@ -220,7 +229,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row g-4">
+            <div class="row g-5">
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="service-item rounded d-flex h-100">
                         <div class="service-img rounded">
@@ -263,6 +272,25 @@
                         </div>
                     </div>
                 </div>
+            </div>
+            <div class="vertical-center wow fadeInUp mt-5" data-wow-delay="0.6s">
+                <nav aria-label="Page navigation example">
+                    <ul class="pagination">
+                        <li class="page-item">
+                            <a class="page-link" href="#" aria-label="Previous">
+                                <span aria-hidden="true">&lt;</span>
+                            </a>
+                        </li>
+                        <li class="page-item"><a class="page-link" href="#">1</a></li>
+                        <li class="page-item"><a class="page-link" href="#">2</a></li>
+                        <li class="page-item"><a class="page-link" href="#">3</a></li>
+                        <li class="page-item">
+                            <a class="page-link" href="#" aria-label="Next">
+                                <span aria-hidden="true">&gt;</span>
+                            </a>
+                        </li>
+                    </ul>
+                </nav>
             </div>
         </div>
     </div>
