--- a/info3.html
+++ b/info3.html
@@ -71,6 +71,54 @@
       color: white !important;
     }
 
+    .custom-container {
+      display: flex;
+      flex-direction: row;
+      overflow-x: auto;
+      scrollbar-width: none;
+      /* Firefox */
+      -ms-overflow-style: none;
+      /* Internet Explorer 10+ */
+    }
+
+    .custom-container::-webkit-scrollbar {
+      display: none;
+      /* Chrome, Safari, and Opera */
+    }
+
+    .custom-container>a {
+      flex: 0 0 auto;
+      text-decoration: none;
+    }
+
+    .bg {
+      background-color: white;
+    }
+
+    .bg-primary {
+      background-color: blue;
+    }
+
+    .text-center {
+      text-align: center;
+    }
+
+    .p-2 {
+      padding: 0.5rem;
+    }
+
+    .px-5 {
+      padding-left: 1.25rem;
+      padding-right: 1.25rem;
+    }
+
+    @media (min-width: 768px) {
+      .custom-container {
+        display: flex;
+        flex-direction: row;
+        overflow-x: visible;
+      }
+    }
   </style>
   <!-- JavaScript Libraries -->
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
@@ -203,23 +251,19 @@
   </div>
   <!-- Page Header End -->
 
-  <div class="container">
-    <div class="bg-white text-center">
-      <div class="text-center d-flex justify-content-center">
-        <a href="info.html">
-          <div class="p-2 px-5 bg">Микротренинги</div>
-        </a>
-        <a href="info2.html">
-          <div class="p-2 px-5 bg">Публикации</div>
-        </a>
-        <a href="info3.html">
-          <div class="p-2 bg-primary px-5">Встречи одногруппников</div>
-        </a>
-        <a href="info4.html">
-          <div class="p-2 px-5 bg">Социальные проекты</div>
-        </a>
-      </div>
-    </div>
+  <div class="custom-container">
+    <a href="info.html">
+      <div class="p-2 px-5 bg text-center">Микротренинги</div>
+    </a>
+    <a href="info2.html">
+      <div class="p-2 px-5 bg text-center">Публикации</div>
+    </a>
+    <a href="info3.html">
+      <div class="p-2 bg-primary px-5 text-center text-white">Встречи одногруппников</div>
+    </a>
+    <a href="info4.html">
+      <div class="p-2 px-5 bg text-center">Социальные проекты</div>
+    </a>
   </div>
 
   <!-- Projects Start -->
